--- a/Frontend-ProInvest/Views/Formulario/VerificacionDatosContacto.cshtml
+++ b/Frontend-ProInvest/Views/Formulario/VerificacionDatosContacto.cshtml
@@ -16,27 +16,9 @@
         </div>
     }
     <div class="col-md-6">
-        <h3 class="text-center">Confirmación de correo electrónico @* y teléfono celular *@</h3>
-        <p class="text-center">Es necesario confirmar tu cuenta para seguir con tu registro. Se te ha enviado un correo electrónico con una liga para verificarlo@* , así como un código al número de teléfono proporcionado *@.</p>
-        @* @if (ViewBag.SmsVerificacion != true)
-        {
-            <form asp-action="VerificacionDatosContacto">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div>
-                    <label asp-label-for="codigo">
-                        <h6 class="text-center">Ingrese el código que se envió a tu teléfono celular para continuar con el registro</h6>
-                    </label>
-                    <div class="col-md-4 mx-auto">
-                        <input class="form-control" id="codigo" name="codigo" required/>
-                    </div>
-                </div>
-                <div class="text-center mt-3">
-                    <input type="submit" name="BtnNext" value="Confirmar" class="btn btn-primary" />
-                    <input type="submit" name="BtnPrevious" value="Anterior" class="btn btn-primary" style="display:none;" />
-                </div>
-            </form>
-        } *@
-        @if (@* ViewBag.SmsVerificacion == true && *@ ViewBag.CorreoVerificacio != true)
+        <h3 class="text-center">Confirmación de correo electrónico</h3>
+        <p class="text-center">Es necesario confirmar tu cuenta para seguir con tu registro. Se te ha enviado un correo electrónico con una liga para verificarlo.</p>
+        @if (ViewBag.CorreoVerificacio != true)
         {
             <form asp-action="CorreoVerificado">
                 <h6 class="text-center">¿Ya has confirmado tu correo electrónico? Continúa con tu solicitud</h6>
@@ -46,12 +28,8 @@
             </form>
         }
         <div class="row text-center mt-3">
-            @* <div class="col-md-6">
-                <p><small>¿No recibiste el código?</small></p>
-                <input type="submit" name="BtnSendCode" value="Enviar código" class="btn btn-link btn-sm" />
-            </div> *@
             <form asp-action="EnviarCorreo">
-                <div @* class="col-md-6" *@>
+                <div>
                     <p><small>¿No ves el correo electrónico?</small></p>
                     <input type="submit" name="BtnSendEmail" value="Enviar correo" class="btn btn-link btn-sm" />
                 </div>
