--- a/Frontend-ProInvest/Views/Shared/_Layout.cshtml
+++ b/Frontend-ProInvest/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Formulario" asp-action="DatosPersonales">Invertir ahora</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MiInversion">Mi Inversión</a>
+                        </li>
                     </ul>
                 </div>
             </div>
