--- a/Frontend-ProInvest/Views/Admin/DetallesDeSolicitudDeInversiones.cshtml
+++ b/Frontend-ProInvest/Views/Admin/DetallesDeSolicitudDeInversiones.cshtml
@@ -42,8 +42,8 @@
             </li>
         </ul>
 
-        <div class="tab-content border border-top-0 p-3" id="tapInfoPersonal">
-            <div class="tab-pane fade show active" id="xalapa-tab-pane" role="tabpanel"
+        <div class="tab-content border border-top-0 p-3" id="tapHomel">
+            <div class="tab-pane fade show active" id="tapInfoPersonal" role="tabpanel"
                  aria-labelledby="home-tab" tabindex="0">
                 <dl class="row">
                     <dt class="col-sm-2">
@@ -189,12 +189,17 @@
                             <dt class="col-sm-2">
                                 @Html.DisplayNameFor(modelItem => item.NombreDocumento)
                             </dt>
-                            <dd class="col-sm-10">
+                            <dd class="col-sm-8">
                                 @Html.DisplayFor(modelItem => item.NombreDocumento)
                             </dd>
-                            <dt></dt>
+                            <dt>
+
+                            </dt>
                             <dd>
-                                <a href="" download>Descargar Archivo</a>
+                                @if (item.URLDoc != null)
+                                {
+                                    <a href="@item.URLDoc.EnlaceBucket" download target="_blank">@item.URLDoc.NombreArchivo</a>
+                                }
                             </dd>
                         }
                     }
